Rename new components payment-dropdown

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -49994,7 +49994,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   font-weight: 400 !important;
   display: inline !important;
 }
-._10ejfg4u {
+.payment-dropdown__text {
   display: table-cell;
   width: 100% !important;
   vertical-align: middle !important;
@@ -67658,7 +67658,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   animation-duration: 0.3s;
   animation-name: enter-e4y1ay4;
 }
-._i3uuixy {
+.payment-dropdown {
   display: block;
   width: 100% !important;
   background: #fff !important;
@@ -67673,7 +67673,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   overflow-y: scroll !important;
   max-height: 424px !important;
 }
-._1s9o8so5 {
+.payment-dropdown__check {
   pointer-events: none !important;
   position: absolute !important;
   top: 0 !important;
@@ -67685,7 +67685,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   animation-timing-function: ease-in-out !important;
   animation-duration: 0.25s !important;
 }
-._ts5d6x {
+.payment-dropdown__title {
   padding: 16px 12px 4px 16px !important;
   white-space: nowrap !important;
   text-transform: uppercase !important;
@@ -67693,7 +67693,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   font-weight: 600 !important;
   color: #484848 !important;
 }
-._6h56b0p {
+.payment-dropdown__check-hide {
   pointer-events: none !important;
   position: absolute !important;
   top: 0 !important;
@@ -69708,13 +69708,13 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   width: 100% !important;
   overflow-wrap: break-word !important;
 }
-._18z8fput {
+.payment-dropdown__icon {
   float: left !important;
   margin-top: -9px !important;
   height: 24px !important;
   margin-right: 16px !important;
 }
-._10ejfg4u {
+.payment-dropdown__text {
   display: table-cell !important;
   width: 100% !important;
   vertical-align: middle !important;
