Rename new components sticky-header, btn-link, site-content__header-button

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -18861,7 +18861,7 @@ ul {
   padding-left: 4px !important;
   font-weight: 600 !important;
 }
-._1qx9l5ba {
+.btn-link__muted {
   color: #717171 !important;
   padding-left: 4px !important;
   font-weight: 600 !important;
@@ -53042,7 +53042,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-left: 16px !important;
   font-weight: 600 !important;
 }
-._u1thwpg {
+.btn-link-xs {
   font-size: inherit !important;
   font-family: inherit !important;
   font-weight: inherit !important;
@@ -54027,7 +54027,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     height: var(--navigation-bar-offset, 80px) !important;
   }
 }
-._6gzg21 {
+.sticky-header {
   box-shadow: rgb(0 0 0 / 10%) 0 1px 0 !important;
   background-color: #fff !important;
   position: fixed !important;
@@ -54039,11 +54039,11 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   animation-duration: 0.1s !important;
 }
 @media (min-width: 744px) {
-  ._6gzg21 {
+  .sticky-header {
     height: var(--navigation-bar-offset, 80px) !important;
   }
 }
-._17twi95 {
+.sticky-header__left {
   color: #717171 !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     'Helvetica Neue', sans-serif !important;
@@ -54052,20 +54052,20 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   line-height: 20px !important;
 }
 @media (min-width: 744px) {
-  ._17twi95 {
+  .sticky-header__left {
     white-space: nowrap !important;
     overflow: hidden !important;
   }
 }
-._yauuy6 {
+.sticky-header__nav {
   display: inline-block !important;
   white-space: nowrap !important;
 }
-._14f4nnk {
+.sticky-header__nav-item {
   display: inline-block !important;
   margin-right: 24px !important;
 }
-._11g6x33 {
+.sticky-header__nav-link-text {
   color: #222 !important;
   font-weight: 600 !important;
   padding: 30px 0 !important;
@@ -54073,7 +54073,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   text-decoration: none !important;
   position: relative !important;
 }
-._11g6x33::after {
+.sticky-header__nav-link-text::after {
   background-color: #222 !important;
   content: '' !important;
   display: block !important;
@@ -54084,7 +54084,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   transition: opacity 0.15s !important;
   width: 100% !important;
 }
-._xkkzkj {
+.sticky-header__right {
   -webkit-box-align: center !important;
   align-items: center !important;
   display: flex !important;
@@ -54097,12 +54097,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: none !important;
   white-space: nowrap !important;
 }
-._15tm0yy3 {
+.sticky-header__action {
   white-space: nowrap !important;
   display: block !important;
   margin-left: 40px !important;
 }
-._1fxck3d {
+.sticky-header__action-inner {
   -webkit-box-align: center !important;
   color: #222 !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -54115,7 +54115,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: flex !important;
   align-items: center !important;
 }
-._ixddx0 {
+.sticky-header__action-left {
   -webkit-box-pack: center !important;
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
@@ -54126,26 +54126,26 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   justify-content: center !important;
   margin-right: 16px !important;
 }
-._176k0ns {
+.sticky-header__action-subtitle {
   margin-top: 4px !important;
 }
-._1pg77l15 {
+.sticky-header__action-subtitle-inner {
   -webkit-box-align: baseline !important;
   align-items: baseline !important;
   display: flex !important;
   font-size: 12px !important;
   line-height: 16px !important;
 }
-._9qqdp4 {
+.sticky-header__action-icon {
   text-align: center !important;
   color: var(--dls19-brand-color) !important;
 }
-._12si43g {
+.sticky-header__action-subtitle-text {
   color: #222 !important;
   padding-left: 4px !important;
   font-weight: 600 !important;
 }
-._108mstlv {
+.site-content__header-button {
   cursor: pointer !important;
   display: inline-block !important;
   margin: 0 !important;
@@ -54174,7 +54174,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   color: #fff !important;
 }
 @supports (--custom: properties) {
-  ._108mstlv {
+  .site-content__header-button {
     background: var(
       --dls19-brand-gradient,
       linear-gradient(to right, #e61e4d 0, #e31c5f 50%, #d70466 100%)
@@ -57689,7 +57689,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     margin-top: 40px !important;
   }
 }
-._108mstlv {
+.site-content__header-button {
   cursor: pointer !important;
   display: inline-block !important;
   margin: 0 !important;
@@ -57737,57 +57737,57 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   ) !important;
   color: #fff !important;
 }
-._108mstlv:focus-visible {
+.site-content__header-button:focus-visible {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px #222 !important;
 }
-._108mstlv:focus-visible::-moz-focus-inner {
+.site-content__header-button:focus-visible::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._108mstlv:focus-visible:focus::-moz-focus-inner {
+.site-content__header-button:focus-visible:focus::-moz-focus-inner {
   border: none !important;
 }
-._108mstlv:focus-visible:-moz-focusring {
+.site-content__header-button:focus-visible:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._108mstlv:focus-visible {
+  .site-content__header-button:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._108mstlv:focus[data-focus-visible-added] {
+.site-content__header-button:focus[data-focus-visible-added] {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px #222 !important;
 }
-._108mstlv:focus[data-focus-visible-added]::-moz-focus-inner {
+.site-content__header-button:focus[data-focus-visible-added]::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._108mstlv:focus[data-focus-visible-added]:focus::-moz-focus-inner {
+.site-content__header-button:focus[data-focus-visible-added]:focus::-moz-focus-inner {
   border: none !important;
 }
-._108mstlv:focus[data-focus-visible-added]:-moz-focusring {
+.site-content__header-button:focus[data-focus-visible-added]:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._108mstlv:focus[data-focus-visible-added] {
+  .site-content__header-button:focus[data-focus-visible-added] {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._108mstlv:active {
+.site-content__header-button:active {
   -webkit-transform: scale(0.96) !important;
   -ms-transform: scale(0.96) !important;
   transform: scale(0.96) !important;
@@ -57795,7 +57795,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   background: #ff385c !important;
   color: #fff !important;
 }
-._108mstlv:disabled {
+.site-content__header-button:disabled {
   cursor: not-allowed !important;
   opacity: 1 !important;
   border: none !important;
@@ -57803,13 +57803,13 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   color: #fff !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._108mstlv {
+  .site-content__header-button {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._108mstlv:hover {
+.site-content__header-button:hover {
   border: none !important;
   background: -webkit-linear-gradient(
     to right,
@@ -57832,8 +57832,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   color: #fff !important;
 }
 @supports (--custom: properties) {
-  ._108mstlv,
-  ._108mstlv:hover {
+  .site-content__header-button,
+  .site-content__header-button:hover {
     background: var(
       --dls19-brand-gradient,
       -webkit-linear-gradient(to right, #e61e4d 0, #e31c5f 50%, #d70466 100%)
@@ -57847,10 +57847,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
       linear-gradient(to right, #e61e4d 0, #e31c5f 50%, #d70466 100%)
     ) !important;
   }
-  ._108mstlv:active {
+  .site-content__header-button:active {
     background: var(--dls19-brand-gradient-accent, #ff385c) !important;
   }
-  ._108mstlv:disabled {
+  .site-content__header-button:disabled {
     background: #b0b0b0 !important;
   }
 }
@@ -58708,7 +58708,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .dir.pzfo4tk[class][class] {
   margin-top: var(--h-x-sf-jw);
 }
-._ati8ih {
+.sticky-header__action-title {
   -webkit-box-align: var(
     --pricing-guest-display-price-alignment,
     flex-start
@@ -58722,7 +58722,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     flex-start
   ) !important;
 }
-._14y1gc {
+.sticky-header__action-title-inner {
   font-size: var(--pricing-guest-primary-line-font-size, 16px) !important;
   line-height: var(--pricing-guest-primary-line-line-height, 20px) !important;
   overflow: var(--pricing-guest-primary-line-overflow, initial) !important;
@@ -58731,7 +58731,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     inherit
   ) !important;
 }
-._1jo4hgw {
+.sticky-header__action-title-text {
   -webkit-box-pack: var(
     --pricing-guest-display-price-alignment,
     flex-start
@@ -58747,13 +58747,13 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   ) !important;
   flex-wrap: var(--pricing-guest-display-price-flex-wrap, wrap) !important;
 }
-._tyxjp1 {
+.sticky-header__action-text-highlighted {
   font-weight: var(
     --pricing-guest-primary-line-unit-price-font-weight,
     800
   ) !important;
 }
-._r1nvod {
+.sticky-header__action-text {
   white-space: nowrap !important;
   font-weight: 400 !important;
   font-size: var(
@@ -69582,7 +69582,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   animation-timing-function: ease-in-out !important;
   animation-name: keyframe_18jn58a !important;
 }
-._11g6x33:hover::after {
+.sticky-header__nav-link-text:hover::after {
   opacity: 1 !important;
 }
 ._1f22edh {
