list-group-checked*

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -67716,13 +67716,13 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   overflow-wrap: break-word !important;
   background-color: #f2f2f2 !important;
 }
-._os2yin {
+.list-group-checked {
   padding: 0 24px !important;
   flex: 1 1 auto !important;
   overflow-y: auto !important;
   outline: 0 !important;
 }
-._13ni8kr {
+.list-group-checked__item {
   -webkit-box-align: center !important;
   outline-width: 0 !important;
   cursor: pointer !important;
@@ -67733,29 +67733,29 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   padding-bottom: 12px !important;
   border-top: 1px solid #ddd !important;
 }
-._13ni8kr:first-child {
+.list-group-checked__item:first-child {
   border-top: none !important;
 }
-._uyh343 {
+.list-group-checked__text-wrapper {
   flex: 1 1 auto !important;
   overflow: hidden !important;
   text-overflow: ellipsis !important;
 }
-._1oy1k74 {
+.list-group-checked__text {
   color: #222 !important;
   font-size: 16px !important;
 }
-._bgqgdvf {
+.list-group-checked__text-active {
   color: #222 !important;
   font-size: 16px !important;
   font-weight: 800 !important;
 }
-._n2l06u {
+.list-group-checked__icon-wrapper {
   width: 48px !important;
   height: 48px !important;
   overflow: hidden !important;
 }
-._2z24kjo {
+.list-group-checked__icon {
   opacity: 1 !important;
   animation-duration: 0.25s !important;
   animation-timing-function: ease-in-out !important;
