--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -57951,7 +57951,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     margin-bottom: 80px !important;
   }
 }
-._dj903s {
+.modal__list-group-body {
   -webkit-box-lines: multiple !important;
   -webkit-box-pack: start !important;
   -ms-flex-pack: start !important;
@@ -63974,7 +63974,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   line-height: 20px !important;
   padding-left: 8px !important;
 }
-._4gelgl {
+.modal__list-group-text {
   font-size: 16px !important;
   line-height: 20px !important;
 }
@@ -67867,46 +67867,46 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: inline-block !important;
   margin-right: 16px !important;
 }
-._v1m4jk {
+.modal__lead-wrapper {
   padding-bottom: 24px !important;
   margin-bottom: 24px !important;
 }
-._rjfnlo {
+.modal__lead {
   font-size: 26px !important;
   line-height: 30px !important;
   color: #222 !important;
   font-weight: 600 !important;
 }
-._o26o64 {
+.modal__list-group-heading {
   font-size: 18px !important;
   line-height: 22px !important;
   color: #222 !important;
   font-weight: 600 !important;
   margin-bottom: 32px !important;
 }
-._1cnosla {
+.modal__list-group-item {
   margin-top: 24px !important;
   padding-bottom: 24px !important;
   color: #222 !important;
   border-bottom: 1px solid #ddd !important;
 }
-._v0q64e7 {
+.modal__list-group-title-wrapper {
   position: relative !important;
   width: 25% !important;
   margin-left: 0 !important;
   margin-right: 0 !important;
 }
-._68scml {
+.modal__list-group-title {
   font-size: 16px !important;
   line-height: 20px !important;
   font-weight: 600 !important;
   margin-bottom: 4px !important;
 }
-._1r0bq6e {
+.modal__list-group-subtitle {
   font-size: 10px !important;
   line-height: 16px !important;
 }
-._96puxn7 {
+.modal__list-group-text-wrapper {
   position: relative !important;
   width: 75% !important;
   margin-left: 0 !important;
@@ -67916,7 +67916,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-top: 32px !important;
   margin-bottom: 32px !important;
 }
-._1uvwwwt {
+.modal__padding-xs {
   padding: 5px !important;
 }
 ._10cqbup {
