--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -67912,7 +67912,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-left: 0 !important;
   margin-right: 0 !important;
 }
-._nt5bsb {
+.my-8 {
   margin-top: 32px !important;
   margin-bottom: 32px !important;
 }
