--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -21190,7 +21190,7 @@ tr.hide {
   margin-top: 8px !important;
   text-align: center !important;
 }
-._1ou8uzt {
+.mb-8 {
   margin-bottom: 32px !important;
 }
 .site-content__content-menu-wrapper {
