--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -49927,7 +49927,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   overflow-y: hidden !important;
   -ms-overflow-y: hidden !important;
 }
-._1eaes69 {
+.flex-0-auto {
   -webkit-flex: 0 0 auto !important;
   -ms-flex: 0 0 auto !important;
   flex: 0 0 auto !important;
@@ -60356,7 +60356,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 ._uy2bhv {
   padding-top: 24px !important;
 }
-._1eaes69 {
+.flex-0-auto {
   flex: 0 0 auto !important;
 }
 ._f4l4c1 {
