--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -13054,7 +13054,7 @@
   justify-content: space-between !important;
   padding-left: 12px !important;
 }
-._1fza94o {
+.confirm-pay__trip-detail-text-sm {
   font-size: 12px !important;
   line-height: 16px !important;
   overflow: hidden !important;
@@ -13064,7 +13064,7 @@
   -webkit-box-orient: vertical !important;
   color: #717171 !important;
 }
-._bp4bbx {
+.confirm-pay__trip-detail-text-md {
   font-size: 14px !important;
   line-height: 18px !important;
   overflow: hidden !important;
@@ -13076,7 +13076,7 @@
   margin-top: 4px !important;
 }
 @supports (overflow: clip) {
-  ._bp4bbx {
+  .confirm-pay__trip-detail-text-md {
     overflow: clip !important;
   }
 }
