inline-login__heading

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -43059,7 +43059,7 @@ video::cue {
   background: #fff !important;
   border: 1px solid #ddd !important;
 }
-._1qfgcw8 {
+.inline-login__heading {
   font-size: 22px !important;
   line-height: 26px !important;
   margin-bottom: 24px !important;
@@ -43542,14 +43542,14 @@ video::cue {
   display: flex !important;
   opacity: 0 !important;
 }
-._1qfgcw8 {
+.inline-login__heading {
   font-size: 22px !important;
   line-height: 26px !important;
   font-weight: 600 !important;
   margin-bottom: 0;
 }
 @media (min-width: 744px) {
-  ._1qfgcw8 {
+  .inline-login__heading {
     font-size: 22px !important;
     line-height: 26px !important;
   }
