form__help-text

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -23685,7 +23685,7 @@ tr.hide {
   margin-bottom: 24px !important;
   margin-top: 16px !important;
 }
-._166d2jm {
+.form__help-text {
   margin-top: 8px !important;
   color: #222 !important;
   font-size: 12px !important;
