btn-light-outlined*

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -23908,7 +23908,7 @@ tr.hide {
   -webkit-justify-content: space-between !important;
   justify-content: space-between !important;
 }
-._1a2vq1h {
+.btn-light-outlined__text {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   display: -webkit-box !important;
@@ -40732,7 +40732,7 @@ video::cue {
     overflow: clip !important;
   }
 }
-._snbhip0 {
+.btn-light-outlined {
   cursor: pointer !important;
   display: inline-block !important;
   margin: 0 !important;
@@ -67797,7 +67797,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-bottom: 16px !important;
   width: 31% !important;
 }
-._1u21f56 {
+.btn-light-outlined__centered {
   -webkit-box-pack: center !important;
   display: flex !important;
   justify-content: center !important;
